<resources>
    <string name="app_name">Adopta Una Mascota App</string>
    <string name="login_text">Login</string>
    <string name="nombre_usuario"> Nombre de usuario</string>
    <string name="password"> Contraseña</string>
    <string name="recordar_password">¿Has olvidado tu contraseña? Pulsa</string>
    <string name="iniciar_sesion">INICIAR SESION</string>
    <string name="registrate">¿Todavía no tienes cuenta? Regístrate </string>
    <string name="aqui"> aquí</string>
    <string name="escribe_tu_correo">Introduce tu email y te enviaremos un correo</string>
    <string name="email"> Email</string>
    <string name="enviar">ENVIAR</string>
    <string name="registate_y_adopta_una_mascota_fabulosa">Regístrate y adopta una mascota fabulosa</string>
    <string name="nombre"> Nombre</string>
    <string name="registrate_button">REGISTRATE</string>
    <string name="todos_los_derechos_reservados">Todos los derechos reservados.</string>
    <string name="repite_pass">Repite contraseña</string>
    <string name="olvidado_pass">¿Has olvidado tu contraseña?</string>
    <string name="apellidos"> Apellidos</string>
    <string name="perros">Perros</string>
    <string name="gatos">Gatos</string>
    <string name="usuarios">Gestión usuarios</string>
    <string name="mascotas">Gestión mascotas</string>
    <string name="solicitar_adopci_n">Solicitar adopción</string>
    <string name="descripci_n">Descripción</string>
    <string name="tel_fono"> Teléfono</string>
    <string name="fecha_de_nacimiento"> Fecha de nacimiento</string>
    <string name="direcci_n"> Dirección</string>
    <string name="mensaje"> Mensaje</string>
    <string name="estas_son_nuestras_mascotas">Estas son nuestras mascotas</string>
    <string name="dar_de_alta_nuevo_animal">Dar de alta nuevo animal</string>
    <string name="a_ade_nueva_mascota">Añade nueva mascota</string>
    <string name="camara">Camara</string>
    <string name="galeria">Galeria</string>
    <string name="perro">Perro</string>
    <string name="gato">Gato</string>
    <string name="menor_de_6_meses">Menor de 6 meses</string>
    <string name="mayor_de_6_meses">Mayor de 6 meses</string>
    <string name="tama_o_peque_o">Tamaño pequeño</string>
    <string name="tama_o_mediano">Tamaño mediano</string>
    <string name="tama_o_grande">Tamaño grande</string>
    <string name="selecciona_fecha_de_nacimiento">Selecciona fecha de nacimiento</string>
    <string name="raza_de_la_mascota">Raza de la mascota</string>
    <string name="descripci_n_de_la_mascota">Descripción de la mascota</string>
    <string name="alt_boton_crear_animal">Botón para añadir animal</string>
    <string name="listado_de_usuarios">Listado de usuarios</string>
    <string name="a_adir_usuario">Añadir usuario</string>
    <string name="boton_usuarios">botón usuarios</string>
    <string name="dar_de_alta_nuevo_usuario">Dar de alta nuevo usuario</string>
    <string name="registrar">Registrar</string>
    <string name="titulo_spinner">Filtrar</string>
    <string name="hembra">hembra</string>
    <string name="macho">macho</string>
    <string name="logout">Logout</string>

    <string name="navigation_drawer_open">Abrir</string>
    <string name="navigation_drawer_close">Cerrar</string>


    <string-array name="subcategorias_perro">
        <item>Filtrar</item>
        <item>Grande</item>
        <item>Mediano</item>
        <item>Pequeño</item>
    </string-array>

    <string-array name="subcategorias_gato">
        <item>Filtrar</item>
        <item>Mayor de 6 meses</item>
        <item>Menor de 6 meses</item>
    </string-array>
</resources>