<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_vertical">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_weight="1"
            android:paddingRight="0dp"
            android:paddingLeft="0dp"
            android:layout_gravity="center"
            android:src="@drawable/logo"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/registate_y_adopta_una_mascota_fabulosa"
            android:layout_marginBottom="10dp"
            android:textStyle="bold"
            android:textSize="20sp"
            android:gravity="center"
            android:textColor="@color/negro_opacidad"
            android:layout_gravity="center"/>


        <EditText
            android:id="@+id/nombreEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="30dp"
            android:layout_marginLeft="30dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/edittext_box"
            android:hint="@string/nombre"
            android:drawableStart="@drawable/baseline_person_24"/>

        <EditText
            android:id="@+id/apellidosEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="30dp"
            android:layout_marginLeft="30dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/edittext_box"
            android:hint="@string/apellidos"
            android:drawableStart="@drawable/baseline_perm_identity_24"/>

        <EditText
            android:id="@+id/emaillEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="30dp"
            android:layout_marginLeft="30dp"
            android:hint="@string/email"
            android:background="@drawable/edittext_box"
            android:inputType="textPassword"
            android:layout_marginBottom="20dp"
            android:drawableStart="@drawable/baseline_email_24"/>

        <EditText
            android:id="@+id/passwordEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="30dp"
            android:layout_marginLeft="30dp"
            android:hint="@string/password"
            android:background="@drawable/edittext_box"
            android:inputType="textPassword"
            android:layout_marginBottom="20dp"
            android:drawableStart="@drawable/baseline_edit_24"/>

        <EditText
            android:id="@+id/repeatPasswordEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="30dp"
            android:layout_marginLeft="30dp"
            android:hint="@string/repite_pass"
            android:background="@drawable/edittext_box"
            android:inputType="textPassword"
            android:layout_marginBottom="20dp"
            android:drawableStart="@drawable/baseline_edit_24"/>


        <Button
            android:id="@+id/botonRegistrate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/registrate_button"
            android:layout_gravity="center"
            android:padding="10dp"
            android:layout_marginBottom="10dp"
            android:backgroundTint="@color/azul_oscuro" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:text="@string/todos_los_derechos_reservados"
            android:textStyle="bold"
            android:textSize="16sp"
            android:gravity="center"
            android:layout_gravity="center" />


    </LinearLayout>

</ScrollView>