<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/logo"
                android:layout_marginStart="16dp"/>

            <TextView
                android:layout_marginLeft="20dp"
                android:layout_marginTop="40dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/solicitar_adopci_n"
                android:textSize="24sp"
                android:textStyle="bold"/>
        </LinearLayout>

        <!-- Card con la información del animal -->
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp"
                android:gravity="center">


                <ImageView
                    android:id="@+id/imageViewAnimal"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/icono_gato" />

                <!-- Nombre del animal -->
                <TextView
                    android:id="@+id/textViewAnimalName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/nombre"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <!-- Descripción -->
                <TextView
                    android:id="@+id/textViewDescription"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/descripci_n" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <!-- Formulario de adopción -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">


            <EditText
                android:id="@+id/editTextTelefono"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="30dp"
                android:layout_marginLeft="30dp"
                android:layout_marginBottom="30dp"
                android:background="@drawable/edittext_box"
                android:drawableStart="@drawable/baseline_local_phone_24"
                android:hint="@string/tel_fono" />

            <!-- Campo FECHA DE NACIMIENTO -->
            <EditText
                android:id="@+id/editTextFechaNacimiento"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="30dp"
                android:layout_marginLeft="30dp"
                android:layout_marginBottom="30dp"
                android:background="@drawable/edittext_box"
                android:drawableStart="@drawable/baseline_calendar_month_24"
                android:hint="@string/fecha_de_nacimiento" />

            <EditText
                android:id="@+id/editTextDireccion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="30dp"
                android:layout_marginLeft="30dp"
                android:layout_marginBottom="30dp"
                android:background="@drawable/edittext_box"
                android:drawableStart="@drawable/baseline_home_24"
                android:hint="@string/direcci_n" />


            <EditText
                android:id="@+id/editTextMensaje"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="30dp"
                android:layout_marginLeft="30dp"
                android:layout_marginBottom="30dp"
                android:background="@drawable/edittext_box"
                android:drawableStart="@drawable/baseline_text_snippet_24"
                android:hint="@string/mensaje"
                android:inputType="textMultiLine"
                android:minLines="3" />

            <!-- Botón de enviar -->
            <Button
                android:id="@+id/buttonEnviar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="10dp"
                android:backgroundTint="@color/azul_oscuro"
                android:text="@string/enviar" />

        </LinearLayout>

    </LinearLayout>

</ScrollView>