<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_vertical">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_weight="1"
            android:paddingRight="0dp"
            android:paddingLeft="0dp"
            android:layout_gravity="center"
            android:src="@drawable/logo"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/recordar_password"
            android:textColor="@color/negro_opacidad"
            android:textStyle="bold"
            android:textSize="30sp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:gravity="center"
            android:layout_gravity="center"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/escribe_tu_correo"
            android:textColor="@color/negro_opacidad"
            android:textStyle="bold"
            android:textSize="24sp"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:gravity="center"
            android:layout_marginTop="20dp"
            android:layout_gravity="center"/>

        <EditText
            android:id="@+id/nombreUsuarioEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="30dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="30dp"
            android:background="@drawable/edittext_box"
            android:hint="@string/email"
            android:drawableStart="@drawable/baseline_email_24"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enviar"
            android:layout_gravity="center"
            android:padding="10dp"
            android:backgroundTint="@color/azul_oscuro"
            />
        <!--android:onClick="ShowPopUp"-->



    </LinearLayout>

</ScrollView>