<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_vertical">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:src="@drawable/logo"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/login_text"
            android:textStyle="bold"
            android:textSize="20sp"
            android:gravity="center"
            android:layout_gravity="center"/>


        <EditText
            android:id="@+id/nombreUsuarioEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="30dp"
            android:layout_marginLeft="30dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/edittext_box"
            android:hint="@string/nombre_usuario" />

        <EditText
            android:id="@+id/passwordEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="30dp"
            android:layout_marginLeft="30dp"
            android:hint="@string/password"
            android:background="@drawable/edittext_box"
            android:inputType="textPassword" />


    </LinearLayout>

</ScrollView>
